packages/sdk/ui-react/src/widget/splitButton/splitButton.scss
//
// Copyright (c) Microsoft. All rights reserved.
// Licensed under the MIT license.
//
// Microsoft Bot Framework: http://botframework.com
//
// Bot Framework Emulator Github:
// https://github.com/Microsoft/BotFramwork-Emulator
//
// Copyright (c) Microsoft Corporation
// All rights reserved.
//
// MIT License:
// Permission is hereby granted, free of charge, to any person obtaining
// a copy of this software and associated documentation files (the
// "Software"), to deal in the Software without restriction, including
// without limitation the rights to use, copy, modify, merge, publish,
// distribute, sublicense, and/or sell copies of the Software, and to
// permit persons to whom the Software is furnished to do so, subject to
// the following conditions:
//
// The above copyright notice and this permission notice shall be
// included in all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED ""AS IS"", WITHOUT WARRANTY OF ANY KIND,
// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
// MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
// LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
// OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
// WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
//

.container {
  display: inline-flex;
  flex-flow: row nowrap;
  align-items: center;
  height: 18px;

  button {
    height: 18px;
    background-color: transparent;
    background: none;
    border: 0;
    cursor: pointer;
    
    &:hover {
      background-color: var(--split-button-hover-bg-color);
      outline: var(--split-button-hover-outline);
    }

    &:active {
      background-color: var(--split-button-selected-bg-color);
      outline: var(--split-button-selected-outline);
    }

    &:disabled {
      cursor: default;

      &:before {
        background-color: var(--split-button-disabled-color);
      }
    }
  }

  * {
    flex-shrink: 0;
  }
}

.separator {
  width: 1px;
  height: 11px;
  background-color: var(--split-button-separator-bg-color);
}

.default-button {
  display: flex;
  align-items: center;

  > span {
    height: 18px;
    font-size: 11px;
    line-height: 18px;
    color: var(--split-button-color);
  }

  &:active {
    > span {
      color: var(--split-button-pressed-color);
    }
  }

  &:before {
    display: inline-block;
    position: relative;
    width: 12px;
    height: 12px;
    margin-right: 3px;
    background-color: var(--split-button-icon-color);
    content: '';
  }
}

.caret-button {
  display: flex;
  width: auto;

  &.expanded {
    background-color: var(--split-button-selected-bg-color);
    outline: var(--split-button-expanded-outline);
  }

  &:before {
    display: inline-block;
    height: 7px;
    width: 9px;
    -webkit-mask-size: 9px;
    -webkit-mask: url('../../media/ic_chevron_up.svg');
    -webkit-mask-repeat: no-repeat;
    background-color: var(--split-button-color);
    transform: rotate(180deg);
    content: '';
  }

  &:active, &.expanded {
    &:before {
      background-color: var(--split-button-pressed-color);
    }
  }
}

